--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "cse340",
+  "name": "cse340-starter",
   "version": "1.0.0",
-  "description": "Starter project for CSE 340",
+  "description": "This document is intended to get you started quickly in building a backend driven Node.js application complete with pages and content, backend logic and a PostgreSQL database for data storage. ## Prerequisites",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alejogvy/cse340-starter.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.10",
-    "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1",
-    "pg": "^8.14.1"
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Alejogvy/cse340-starter/issues"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+  "homepage": "https://github.com/Alejogvy/cse340-starter#readme"
 }
