--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "array-flatten": "^1.1.1",
     "async": "^3.2.6",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.3",
     "brace-expansion": "^1.1.11",
@@ -39,6 +41,8 @@
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-pg-simple": "^10.0.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
@@ -58,6 +62,10 @@
     "etag": "^1.8.1",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "filelist": "^1.0.4",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
@@ -139,6 +147,5 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
     "xtend": "^4.0.2"
-  },
-  "devDependencies": {}
+  }
 }
