--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
+    "cookie-parser": "^1.4.7",
     "cookie-signature": "^1.0.6",
     "debug": "^2.6.9",
     "depd": "^2.0.0",
@@ -89,6 +90,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "jake": "^10.9.2",
+    "jsonwebtoken": "^9.0.2",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.3",
